--- a/course-materials/assignments/HW4.qmd
+++ b/course-materials/assignments/HW4.qmd
@@ -31,7 +31,7 @@ Your final project consists of three parts. Please read all parts carefully:
 
 Infographics are useful science communication pieces, which can serve a variety of audiences, but are particularly well-suited for engaging general audiences. An infographic typically exists to address one overarching question or idea, and it's subcomponents (e.g. visualizations, numbers, imagery) each help to tell part of the story (or in other words, help to answer sub-questions). While text is important in all visualizations, it can be particularly critical in weaving together all of your infographic elements to successfully convey your story. The order and orientation in which your elements are positioned will also be essential for creating a visual hierarchy that successfully guides your readers. 
 
-All component visualizations must be produced using code (e.g. leveraging the `{ggplot2}` package), but you may assemble your final infographic using a tool(s) / software of your choice. It is possible to create your infographic entirely in R (you may consider using the [`{patchwork}` package](https://patchwork.data-imaginist.com/) for stitching together different elements -- see [Ray Hunter's infographic](https://ramhunte.github.io/blogs/china_fishing/){target="_blank"}, or refer back to [HW #1](HW1.qmd#hw1-p1a){target="_blank"}). You may also consider tools like [Adobe Illustrator](https://www.adobe.com/products/illustrator.html){target="_blank"}, [Affinity](https://affinity.serif.com/en-us/){target="_blank"}, [Canva](https://www.canva.com/){target="_blank"}, or [Google Docs](https://docs.google.com/){target="_blank"} (there will be an optional make-up class on Friday 02/07/2025 where you will learn how to use a number of these tools, led by [Dr. Alex Phillips](https://bren.ucsb.edu/people/alexandra-phillips){target="_blank"}).
+All component visualizations must be produced using code (e.g. leveraging the `{ggplot2}` package), but you may assemble your final infographic using a tool(s) / software of your choice. It is possible to create your infographic entirely in R (you may consider using the [`{patchwork}` package](https://patchwork.data-imaginist.com/) for stitching together different elements -- see [Ray Hunter's infographic](https://ramhunte.github.io/blogs/china_fishing/){target="_blank"}, or refer back to [HW #1](HW1.qmd#hw1-p1a){target="_blank"}). You may also consider tools like [Adobe Illustrator](https://www.adobe.com/products/illustrator.html){target="_blank"}, [Affinity](https://affinity.serif.com/en-us/){target="_blank"}, [Canva](https://www.canva.com/){target="_blank"}, or [Google Docs](https://docs.google.com/){target="_blank"} (there will be an optional class on Friday 02/07/2025 where you will learn how to use a number of these tools, led by [Dr. Alex Phillips](https://bren.ucsb.edu/people/alexandra-phillips){target="_blank"}).
 
 **A few examples from Winter 2024 submissions:**
 
@@ -57,7 +57,7 @@ All component visualizations must be produced using code (e.g. leveraging the `{
 
 [**Build three separate visualizations, each to serve a different target audience / purpose. Each visualization should use the same data to answer the same question, but how you choose to present those data should change based on the following:**]{.teal-text}
 
-1. **A visualization for technical writing / subject matter experts:** The purpose of this visualization is to clearly communicate key insights, trends, or patterns, and is one that could be published in a technical report or academic paper. These types of visuals may include more details and domain-specific language. They should, however, still prioritize clarity by finding ways to highlight the most important takeaway message(s). Two great examples are Michael Mann's infamous ["Hockey Stick" graph](https://www.psu.edu/news/research/story/iconic-graph-center-climate-debate){target="_blank"}, and Figure 1 (*Unusual climate anomalies in 2023*) in [Ripple et al. 2023](https://doi.org/10.1093/biosci/biad080){target="_blank"}.
+1. **A visualization for technical writing / subject matter experts:** The purpose of this visualization is to clearly communicate key insights, trends, or patterns, and is one that could be published in a technical report or academic paper. These types of visualizations may include more details and domain-specific language. They should, however, still prioritize clarity by finding ways to highlight the most important takeaway message(s). Two great examples are Michael Mann's infamous ["Hockey Stick" graph](https://www.psu.edu/news/research/story/iconic-graph-center-climate-debate){target="_blank"}, and Figure 1 (*Unusual climate anomalies in 2023*) in [Ripple et al. 2023](https://doi.org/10.1093/biosci/biad080){target="_blank"}.
 
 2. **A visualization for policy- or decision-makers:** The purpose of this visualization is to balance clarity and insight with actionable and evidence-backed data to influence or inform policy decisions. A challenge is effectively communicating key insights, trends, forecasts, comparisons, etc. while remaining accessible to non-experts. These visuals often leverage clear, catchy titles, minimize potentially distracting design elements, present only the most essential data, and use text annotations to draw attention to key areas of a the graphic / help tell a story. A great example is Figure SPM.1(c) (*Adverse impacts from human-caused climate change will continue to intensify*) from the Intergovernmental Panel on Climate Change (IPCC)'s [Climate Change 2023 Synthesis Report](https://www.ipcc.ch/report/ar6/syr/downloads/report/IPCC_AR6_SYR_SPM.pdf){target="_blank"} (see page 7).
 
@@ -82,8 +82,8 @@ All component visualizations must be produced using code (e.g. leveraging the `{
 
 [**Regardless of which option you choose, you are expected to consider all design elements discussed throughout the quarter, implement as appropriate, and justify your decisions.**]{.teal-text} These include, but are not limited to:
 
-1. graphic form (you are **not** limited to just those fundamental chart types discussed in weeks 2 & 4 -- explore other chart types and don't be afraid to get creative with it; check out some of these awesome [data viz creators](../../resources.qmd#inspirational-data-visualization-creators){target="_blank"} to find inspiration)
-2. text (e.g. titles, captions, annotations, axis labels, axis ticks, alt text)
+1. graphic form (you are **not** limited to just those fundamental chart types discussed in weeks 2 & 4 -- explore other chart types and don't be afraid to get creative with it; check out some of these awesome [data viz creators](../../resources.qmd#inspiration){target="_blank"} to find inspiration)
+2. text (e.g. titles, captions, annotations, axis labels, axis text)
 3. themes (i.e. all non-data plot elements; these should be intentionally modified and visually-pleasing)
 4. colors
 5. typography
@@ -122,9 +122,9 @@ You will share your data design process and decisions in a short, 1-2 page (~500
     - warnings and messages are suppressed, as necessary (e.g. using code chunk options `warning: false` & `message: false`); other intermediate products should not be rendered
     - see the Quarto documentation on [HTML Code Blocks](https://quarto.org/docs/output-formats/html-code.html){target="_blank"} and [Execution Options](https://quarto.org/docs/computations/execution-options.html){target="_blank"} for more
 
-3. The body of your blog post should address your approach and decisions for each of the ten design elements listed above (though you are welcome and encouraged to comment on any others that are not explicitly listed). If your visualizations do not include or consider a listed element(s), please comment on why (it's possible that not all ten elements will be applicable to *your* visualizations).
+3. The body of your blog post should address your approach and decisions for each of the ten design elements listed above (though you are welcome and encouraged to comment on any others that are not explicitly listed). If your visualizations do not include or consider a listed element(s), please comment on why (it's possible that not all ten elements will be applicable to *your* visualizations). You may choose to render and refer to individual / component data visualizations throughout the body of your blog post, as necessary or appropriate.
 
-4. Include the all code used to generate your final data viz products in a foldable code chunk (folded by default; see code chunk option, [`code-fold: true`](https://quarto.org/docs/output-formats/html-code.html#folding-code){target="_blank"}), at the end of your blog post. Be sure to include some written text beforehand that lets your readers know that they can explore the full code by expanding the chunk. Your code should: 
+4. Include the all code used to generate your final data viz products in a foldable code chunk (folded by default; see code chunk option, [`code-fold: true`](https://quarto.org/docs/output-formats/html-code.html#folding-code){target="_blank"}), at the end of your blog post. Be sure to include some written text beforehand that lets your readers know that they can explore the full code by expanding the chunk. Here, your code should: 
     - print, but not execute (i.e. use code chunk options `eval: false` & `echo: true`)
     - follow the [tidyverse style guide](https://style.tidyverse.org/){target="_blank"} (important styles are outlined on the [course website](../../clean-code-guide.qmd#general-conventions){target="_blank"})
     - be appropriately organized and annotated (see [these recommendations](../../clean-code-guide.qmd#annotating-code){target="_blank"})
