--- a/course-materials/week2.qmd
+++ b/course-materials/week2.qmd
@@ -108,7 +108,7 @@ Oftentimes, packages that are built to interface with APIs will include their ow
 
 | {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Lecture slides   | {{< fa file-code title="A code file" >}} Code-along template | {{< fa key title="A key" >}} Code-along key |
 |------------------------------------------------------------------------------------------|--------------------------------------------------------------|---------------------------------------------------|
-| [Lecture 2.1: choosing graphic forms](lecture-slides/lecture2.1-choosing-graphic-forms-slides.qmd){target="_blank"}  | *NA* | *NA* |
+| [Lecture 2.1: choosing graphic form](lecture-slides/lecture2.1-choosing-graphic-forms-slides.qmd){target="_blank"}  | *NA* | *NA* |
 | [Lecture 2.2: visualizing distributions](lecture-slides/lecture2.2-distributions-slides.qmd){target="_blank"}  | [2.2 template](https://github.com/EDS-240-Data-Viz/code-along-templates/blob/main/week2/TEMPLATE-lecture2.2-distributions.qmd){target="_blank"} | [2.2 key](keys/KEY-lecture2.2-distributions.qmd){target="_blank"} |
 | [Lecture 2.3: visualizing evolution](lecture-slides/lecture2.3-evolution-slides.qmd){target="_blank"}  | [2.3 template](https://github.com/EDS-240-Data-Viz/code-along-templates/blob/main/week2/TEMPLATE-lecture2.3-evolution.qmd){target="_blank"} | [2.3 key](keys/KEY-lecture2.3-evolution.qmd){target="_blank"} |
 : {.hover .bordered tbl-colwidths="[50,25,25]"} 
