added new resources, updated HW #1 & lecture 8.1

--- a/course-materials/assignments/sections/HW1-code.qmd
+++ b/course-materials/assignments/sections/HW1-code.qmd
@@ -21,7 +21,7 @@ library(scales)
 library(showtext) 
 library(tidyverse) 
 
-#..........................read in data..........................
+#.............read in data from GitHub (tidytuesday).............
 ufo_sightings <- read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/main/data/2023/2023-06-20/ufo_sightings.csv')
 places <- read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/main/data/2023/2023-06-20/places.csv')
 
