--- a/course-materials/lecture-slides/lecture8.1-data-stories-slides.qmd
+++ b/course-materials/lecture-slides/lecture8.1-data-stories-slides.qmd
@@ -39,7 +39,7 @@ editor_options:
 - [**color choices** (incl. palette types, emotions, readability)]{.gray-text}
 - how to **tell an interesting story**
 - [how to **center the people and communities** represented in your data]{.gray-text}
-- [**accessibility** through colorblind-friendly palettes & alt text (see [week 2 discussion](https://samanthacsik.github.io/EDS-240-data-viz/course-materials/week2.html#discussion-materials))]{.gray-text}
+- [**accessibility** through colorblind-friendly palettes & alt text]{.gray-text}
 
 ---
 
@@ -93,7 +93,7 @@ You have all listened to, read, and told stories (in this class, in other classe
 >"...the very act of telling a story makes people trust you more... Data doesn't change behavior, emotions do" 
 
 ::: {.right-align-text .body-text-s}
--[Karen Eber](https://www.kareneber.com/) in her TED talk, [Why storytelling is more trustworthy than presenting data](https://www.youtube.com/watch?v=Ez5yS4Q5ASA) (2:45-7:07)
+-[Karen Eber](https://www.kareneber.com/){target="_blank"} in her TED talk, [Why storytelling is more trustworthy than presenting data](https://www.youtube.com/watch?v=Ez5yS4Q5ASA){target="_blank"} (2:45-7:07)
 :::
 
 <br>
@@ -104,7 +104,7 @@ You have all listened to, read, and told stories (in this class, in other classe
 >"Stories are inherent to us. We've been told stories since we were children. Stories are how we learn and how we make decisions."
 
 ::: {.right-align-text .body-text-s}
--[Mike Bugembe](https://www.linkedin.com/in/mikebugembe/?originalSubdomain=uk) in his TED talk, [Lies, racism and sexism: The power of data stories](https://www.ted.com/talks/mike_bugembe_lies_racism_and_sexism_the_power_of_data_stories?hasSummary=true) (13:00-17:50)
+-[Mike Bugembe](https://www.linkedin.com/in/mikebugembe/?originalSubdomain=uk){target="_blank"} in his TED talk, [Lies, racism and sexism: The power of data stories](https://www.ted.com/talks/mike_bugembe_lies_racism_and_sexism_the_power_of_data_stories?hasSummary=true){target="_blank"} (13:00-17:50)
 :::
 
 ::: {.footer}
@@ -235,7 +235,7 @@ p1
 
 ```{r}
 countdown::countdown(
-  minutes = 3,
+  minutes = 2,
   # left = 0, right = 0,
   # Fanfare when it's over
   play_sound = TRUE,
@@ -316,7 +316,7 @@ p2
 
 ```{r}
 countdown::countdown(
-  minutes = 3,
+  minutes = 2,
   # left = 0, right = 0,
   # Fanfare when it's over
   play_sound = TRUE,
@@ -411,7 +411,7 @@ p3
 
 ```{r}
 countdown::countdown(
-  minutes = 3,
+  minutes = 2,
   # left = 0, right = 0,
   # Fanfare when it's over
   play_sound = TRUE,
@@ -426,7 +426,7 @@ countdown::countdown(
 ```
 
 ::: {.footer}
-Recreated based on Cédric Scherer's visualization as showcased in his talk, [ggplot Wizardry: My Favorite Tricks and Secrets for Beautiful Plots in R](https://www.youtube.com/watch?v=7UjA_5gNvdw) 
+Recreated based on Cédric Scherer's visualization as showcased in his talk, [ggplot Wizardry: My Favorite Tricks and Secrets for Beautiful Plots in R](https://www.youtube.com/watch?v=7UjA_5gNvdw){target="_blank"} 
 :::
 
 ---
@@ -517,17 +517,18 @@ ggplot(penguins, aes(x = bill_length_mm, y = bill_depth_mm, color = body_mass_g)
 **Take some time to explore these with your learning partners and be prepared to share out some thoughts.**
 :::
 
-- [A fishery in a sea of change](https://storymaps.arcgis.com/stories/f50bd80b84d349048e9d814769dc29cd), by Amalia Harrington, Jennie Rheuban, and Carolina Bastidas
-- [What's that bug?](https://storymaps.arcgis.com/stories/033b34f9c6224f56b9369c06562929a1?adumkts=social&utm_source=social&aduc=social&adum=external&adusf=linkedin&sf_id=7015x000000aYlKAAU&aduca=mi_employee_advocacy_hootsuite_amplify_soc_ex&adut=6c17fe77-0644-410e-b3fd-dd5d10a217d4), by Esri's StoryMaps Team
-- [Why Arctic fires are releasing more carbon](https://www.reuters.com/graphics/CLIMATE-CHANGE/WILDFIRE-EMISSIONS/zjvqkrwmnvx/), by Simon Scarr
-- [The collapse of insects](https://www.reuters.com/graphics/GLOBAL-ENVIRONMENT/INSECT-APOCALYPSE/egpbykdxjvq/index.html), by Julia Janicki, Gloria Dickie, Simon Scarr and Jitesh Chowdhury
-- [Plastic Air](https://giorgialupi.com/plastic-air), by Giorgia Lupi
-- [The fry universe](https://www.chris-williams.me/fry-universe), by Chris Williams
-- [U.S. Gun Deaths in 2013](https://guns.periscopic.com/?year=2013), by Periscopic
-- [Bussed Out: How American moves its homeless](https://www.theguardian.com/us-news/ng-interactive/2017/dec/20/bussed-out-america-moves-homeless-people-country-study), by the Outside in America team
-- [The unexpected link between imperiled whales and Greenland’s melting ice](https://apps.npr.org/arctic-ice-melting-climate-change/greenland-whales.html), by NPR
-- [Reuters graphics (a collection)](https://www.reuters.com/graphics/)
-- [20 Best Data Storytelling Examples (Updated for 2023)](https://www.juiceanalytics.com/writing/20-best-data-storytelling-examples), by Zach Gemignani
+- [A fishery in a sea of change](https://storymaps.arcgis.com/stories/f50bd80b84d349048e9d814769dc29cd){target="_blank"}, by Amalia Harrington, Jennie Rheuban, and Carolina Bastidas
+- [What's that bug?](https://storymaps.arcgis.com/stories/033b34f9c6224f56b9369c06562929a1?adumkts=social&utm_source=social&aduc=social&adum=external&adusf=linkedin&sf_id=7015x000000aYlKAAU&aduca=mi_employee_advocacy_hootsuite_amplify_soc_ex&adut=6c17fe77-0644-410e-b3fd-dd5d10a217d4){target="_blank"}, by Esri's StoryMaps Team
+- [Why Arctic fires are releasing more carbon](https://www.reuters.com/graphics/CLIMATE-CHANGE/WILDFIRE-EMISSIONS/zjvqkrwmnvx/){target="_blank"}, by Simon Scarr
+- [The collapse of insects](https://www.reuters.com/graphics/GLOBAL-ENVIRONMENT/INSECT-APOCALYPSE/egpbykdxjvq/index.html){target="_blank"}, by Julia Janicki, Gloria Dickie, Simon Scarr and Jitesh Chowdhury
+- [Plastic Air](https://giorgialupi.com/plastic-air){target="_blank"}, by Giorgia Lupi
+- [The fry universe](https://www.chris-williams.me/fry-universe){target="_blank"}, by Chris Williams
+- [U.S. Gun Deaths in 2013](https://guns.periscopic.com/?year=2013){target="_blank"}, by Periscopic
+- [Bussed Out: How American moves its homeless](https://www.theguardian.com/us-news/ng-interactive/2017/dec/20/bussed-out-america-moves-homeless-people-country-study){target="_blank"}, by the Outside in America team
+- [The unexpected link between imperiled whales and Greenland’s melting ice](https://apps.npr.org/arctic-ice-melting-climate-change/greenland-whales.html){target="_blank"}, by NPR
+- [How Close Are the Planet’s Climate Tipping Points?](https://www.nytimes.com/interactive/2024/08/11/climate/earth-warming-climate-tipping-points.html){target="_blank"}, by The New York Times
+- [Reuters graphics (a collection)](https://www.reuters.com/graphics/){target="_blank"}
+- [20 Best Data Storytelling Examples (Updated for 2023)](https://www.juiceanalytics.com/writing/20-best-data-storytelling-examples){target="_blank"}, by Zach Gemignani
 
 ```{r}
 countdown::countdown(
