--- a/resources.qmd
+++ b/resources.qmd
@@ -81,6 +81,7 @@ toc: true
 - **[Nightingale: Journal of the Data Visualization Society](https://nightingaledvs.com/)** -- focuses on data visualization from personal stories to exploratory research to interviews with leaders in the community, data ethics, and best practices
 - Grainger S, Mao F, Buytaert W (2016) **Environmental data visualisation for non-scientific contexts: Literature review and design framework.** Environmental Modelling & Software. 85:299-318. <https://doi.org/10.1016/j.envsoft.2016.09.004>
 - Rougier NP, Droettboom M, Bourne PE (2014) **Ten Simple Rules for Better Figures.** PLOS Computational Biology. 10(9): e1003833. <https://doi.org/10.1371/journal.pcbi.1003833>
+- **[Teach About Climate Change With 30 Graphs From The New York Times](https://www.nytimes.com/2024/01/31/learning/lesson-plans/teach-about-climate-change-with-30-graphs-from-the-new-york-times.html)** -- a new (as of January 2024) collection to explore our planet's warming oceans, intensifying storms and rising air temperatures, as well as its greenhouse gas emissions and climate solutions
 
 ### news / reporting outlets {#news-reporting}
 
@@ -122,7 +123,7 @@ toc: true
 | [Cristophe Nicault](https://www.christophenicault.com/) | [tidytuesday](https://github.com/cnicault/tidytuesday) |
 | [Dan Oehm](https://gradientdescending.com/) | [tidytues](https://github.com/doehm/tidytues) |
 | [Albert Rapp](https://albert-rapp.de/) | [PublicTidyTuesday](https://github.com/AlbertRapp/PublicTidyTuesday), but also check out his [YouTube channel](https://www.youtube.com/@rappa753) & [blog](https://albert-rapp.de/blog) |
-| [Nicola Rennie](https://nrennie.rbind.io/) | [tidytuesday](https://github.com/nrennie/tidytuesday/tree/main) (Nicola also records nearly all of her work using the [`{camcorder}` package](https://github.com/thebioengineer/camcorder)) |
+| [Nicola Rennie](https://nrennie.rbind.io/) | [tidytuesday](https://github.com/nrennie/tidytuesday/tree/main) (Nicola also records nearly all of her work using the [`{camcorder}` package](https://github.com/thebioengineer/camcorder) *and* created a [shiny app](https://nrennie.rbind.io/tidytuesday-shiny-app/) for exploring all of her TidyTuesday creations) |
 | [Cédric Scherer](https://www.cedricscherer.com/) | [TidyTuesday](https://github.com/z3tt/TidyTuesday) |
 | [Tanya Shapiro](https://tanyaviz.com/) | [tanya-data-viz](https://github.com/tashapiro/tanya-data-viz) |
 | [Cara Thompson](https://www.cararthompson.com/index.html) | [tidytuesdays](https://github.com/cararthompson/tidytuesdays) |
@@ -161,6 +162,10 @@ Data are *everywhere*, but that doesn't mean they're necessarily easy to track d
 - **[EPA's National Emissions Inventory (NEI) Data Retrieval Tool](https://awsedap.epa.gov/public/single/?appid=20230c40-026d-494e-903f-3f112761a208&sheet=5d3fdda7-14bc-4284-a9bb-cfd856b9348d&opt=ctxmenu,currsel)** – read more about NEI Data on the [EPA's website](https://www.epa.gov/air-emissions-inventories/2020-national-emissions-inventory-nei-data)
 - **[NOAA's National Centers for Environmental Information](https://www.ncei.noaa.gov/)** – specifically, check out their [Climate Monitoring Products](https://www.ncei.noaa.gov/access/monitoring/products/) (I used the [County Mapping](https://www.ncei.noaa.gov/access/monitoring/climate-at-a-glance/county/mapping/110/pcp/202310/1/value) interface to download precipitation data featured in [Lecture 5.3](https://samanthacsik.github.io/EDS-240-data-viz/slides/week5.3-choropleth.html#/title-slide)'s choropleth map)
 - **[`{tidycensus}` package](https://walker-data.com/tidycensus/)** – tooling that allows R users to more easily interface with a select number of the [US Census Bureau](https://www.census.gov/)'s data APIs and return tidyverse-ready data frames
+
+## Volunteer {#volunteer}
+
+- **[Viz for Social Good](https://www.vizforsocialgood.com/)** – a global non-profit that connects data enthusiasts with mission-driven organizations to create social change through data visualization. Read more about [how it works](https://www.vizforsocialgood.com/how-it-works).
 
 ## Learning communities {#learning-communities}
 
