--- a/course-materials/assignments/HW1.qmd
+++ b/course-materials/assignments/HW1.qmd
@@ -170,7 +170,7 @@ I highly recommend checking out the following resources before diving in:
 - [ ] **3.** What steps are involved in downloading or accessing the data (e.g. "I can download using a button via this online portal," "I need to use an API to retrieve the data," "There's an R package with functions for accessing the API,"  etc.)?
 - [ ] **4.** What question(s) do you hope to answer using these data (remember to read over Enrico Bertini's [article](https://filwd.substack.com/p/asking-the-right-data-questions-andon how to ask the right questions){target="_blank"})? 
 - [ ] **5.** Will you need to combine multiple data sets to successfully answer your question(s)? If so, have you found all the necessary data? Do you have a way to combine it (e.g. matching key values across all data sets)?
-- [ ] ***Optional:** Import your data into R! (this will be a part of the next homework assignment) **IMPORTANT:** If your data files are large (>2GB) DO NOT push your data to GitHub -- instead, add your data file(s) or entire data folder to your `.gitignore` (you'll practice this in Discussion section this week).*
+- [ ] ***Optional:** Import your data into R! (this will be a part of the next homework assignment) **IMPORTANT:** If your data files are large (>2GB) DO NOT push your data to GitHub -- instead, add your data file(s) or entire data folder to your `.gitignore` (you'll practice this in week 1 discussion section).*
 
 ## Rubric (specifications) {#hw1-p2-specs}
 
@@ -181,15 +181,15 @@ You must complete the following, as detailed below, to receive a "Satisfactory" 
 Complete the following step under your own personal GitHub profile, *not* via GitHub Classroom. See details below.
 :::
 
-- [ ] Create a GitHub repository named `lastName-eds240-HW4`, which is where you'll be doing any / all work related to Assignment #4. Be sure to make your repository public, initialize your repository with a `README`, and add a `.gitignore` file.
+- [ ] Create a GitHub repository named `yourLastName-eds240-HW4`, which is where you'll be doing any / all work related to Assignment #4. Be sure to make your repository public, initialize your repository with a `README`, and add a `.gitignore` file.
 - [ ] Create a [GitHub issue](https://docs.github.com/en/issues/tracking-your-work-with-issues/about-issues) (find the **Issues** tab in the top menu bar of your `lastName-eds240-HW4` repo, then click **New issue**) and name it, `HW1 - finding data / initial brainstorming`. Address the following in your issue:
     - [ ] Link to (or otherwise prove the existence of) at least one data set that you plan to use for Assignment #4.
     - [ ] Answer all five Part 2c questions. There is no set length requirement, but you must answer each question in full to receive a Satisfactory score.
     - [ ] Ensure that your GitHub issue is neatly organized / formatted (you can use Markdown syntax here!).
-    - [ ] Tag your instructor (**@samanthacsik**) and TA (**@annieradams**) somewhere in your issue (at the start or end may make the most sense) -- this will send us an email notification linking to your issue.
+    - [ ] Tag your instructor (**[@samanthacsik](https://github.com/samanthacsik){target="_blank"}**) and TA (**[@annieradams](https://github.com/annieradams){target="_blank"}**) somewhere in your issue (at the start or end may make the most sense) -- this will send us an email notification linking to your issue.
 - [ ] Importing your data is *optional* -- if you'd like to start playing around with your data, do so in a file named, `HW1-find-data.qmd`.
 - [ ] Add your repository's URL next to your name on [this Google Sheet](https://docs.google.com/spreadsheets/d/1VizY_Yc1m_EwudpIHcCPHlFIo8BIXyoQzlcFg7FhRiw/edit?usp=sharing){target="_blank"} by 11:59pm on Sat 01/18/2025.
-- [ ] ***Optional:** If you are pursuing ([Option 3](HW4.qmd#option3-alternative){target="_blank"}), please share a Google Doc with your proposal via email by 11:59pm on Sat 01/18/2025. Be sure to send it to both your instructor (**scsik@ucsb.edu**) and TA (**gstephenson@ucsb.edu**) with the subject line: **EDS 240 HW4 Proposal Submission.***
+- [ ] ***Optional:** If you are pursuing ([Option 3](HW4.qmd#option3-alternative){target="_blank"}), please share a Google Doc with your proposal via email by 11:59pm on Sat 01/18/2025. Be sure to send it to both your instructor (**scsik@ucsb.edu**) and TA (**annieradams@ucsb.edu**) with the subject line: **EDS 240 HW4 Proposal Submission.***
 
 <br>
 
